CSS changes applied

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,11 @@ body {
 
 .login a {
   text-align: center;
+  font-size: large;
+}
+.register a {
+  text-align: center;
+  font-size: large;
 }
 
 input[type='text'] {
